# linode-cli-ai

./: .gitignore  BUILDWATCH_OPTIONAL_CAPABILITY.md  IMPLEMENTATION_COMPLETE.md  README.md  implementation-checklist.md  linode-cli-ai-phase1-plan.md  pyproject.toml  vision_yolo_test.py
docs/: ARCHITECTURE.md  CAPABILITIES.md  template-deployments.md  template-development.md  template-quick-reference.md
linodecli_ai/: __init__.py
linodecli_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
linodecli_ai/commands/: base.py  deploy.py  destroy.py  init.py  status.py  templates.py
linodecli_ai/core/: cloud_init.py  env.py  linode_api.py  project.py  registry.py  templates.py  user_templates.py
linodecli_ai/templates/: __init__.py  index.yml
linodecli_ai/templates/chat-agent/: template.yml
linodecli_ai/templates/embeddings-bert/: template.yml
linodecli_ai/templates/llm-api/: template.yml
linodecli_ai/templates/ml-pipeline/: template.yml
linodecli_ai/templates/vision-yolo/: template.yml
linodecli_build/: __init__.py
linodecli_build/commands/: __init__.py  base.py  deploy.py  destroy.py  init.py  scaffold.py  status.py  templates.py
linodecli_build/core/: __init__.py  capabilities.py  cloud_init.py  colors.py  llm_instructions_generator.py  project.py  registry.py  user_templates.py
linodecli_build/templates/chat-agent/: template.yml
linodecli_build/templates/embeddings-python/: template.yml
linodecli_build/templates/llm-api/: template.yml
linodecli_build/tui/: styles.tcss
scripts/: build-monitor.py
(+12 files in other folders)
